main nav, fix on mobile

--- a/wp-content/themes/starting-theme/sass/pages/_header.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_header.scss
@@ -114,7 +114,10 @@ span.open {
       margin: 0;
       padding: 0;
       a {
-        font-size: 28px;
+        font-size: 18px;
+        @include md {
+          font-size: 28px;
+        }
         font-weight: 400;
         color: #fff;
         text-transform: uppercase;
